# mlnetst

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
container/: requirements.txt  singularity.def
docs/: draw_graphs.ipynb  explore_databases.ipynb  main_comparison_muxviz.R  main_comparison_muxviz.py  main_metrics.py  main_structural_analysis.py  main_temporal_query_data.py  main_tensor_analyser.py  main_test_uunet.py  main_visualize_tensor_and_supraadj.py  message_passing_scratch.py  poc.py  poc_broadcast.py  poc_script.py  project_design.py  readme.md  run_resource_stats.py  sampling_smaller_datasets.py  scratch_resource_analysis.py  scratch_scseqcomm.ipynb  simple_gnn_scratch.py  transformer_scratch.py  visualize_multilayer_manim.py
docs/tex/project_design/: beamerfontthemeUnipd.sty  beamerinnerthemeUnipd.sty  beamerouterthemeUnipd.sty  beamerthemeUnipd.sty  main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.toc  mybeamer.cls
docs/tex/project_design/raw/: step_year.tex
docs/tex/project_design/updates/: kickoff.tex  wp1.tex
logs/: events.out.tfevents.1751626886.matteopc  events.out.tfevents.1751626950.matteopc  events.out.tfevents.1751641176.matteopc  events.out.tfevents.1751645098.matteopc
media/videos/visualize_multilayer_manim/480p15/partial_movie_files/CreateCircle/: partial_movie_file_list.txt
media/videos/visualize_multilayer_manim/480p15/partial_movie_files/SquareToCircle/: partial_movie_file_list.txt
mlnetst/: __init__.py
mlnetst/core/knowledge/: networks.py
mlnetst/core/network/: build_network.py  structural_analysis.py
mlnetst/core/preprocessing/: embedder.py  integrator.py  loader.py  manager.py  processor.py
mlnetst/utils/: __init__.py  annotate_genes.R  build_network_utils.py  computation_utils.py  graph_pooling_utils.py  knowledge_utils.py  mlnet_logging.py  mlnet_metrics_utils.py  mlnet_utils.py  sparse_utils.py
renv/: projects  settings.json
tests/: conftest.py  test_mlnet_metrics_utils.py  test_mlnet_utils.py
