[project]
name = "mlnetst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata==0.11.4",
    "datashader>=0.18.0",
    "decoupler>=1.9.2",
    "holoviews>=1.20.2",
    "igraph>=0.11.8",
    "liana>=1.5.1",
    "lightning>=2.5.1.post0",
    "matplotlib==3.10.1",
    "networkx==3.4.2",
    "nichecompass>=0.1.3",
    "notebook>=7.4.1",
    "numba==0.61.2",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "param>=2.2.0",
    "pip>=25.1.1",
    "polars>=1.29.0",
    "pyjulia==0.0.6",
    "pymnet>=1.0.0",
    "scanpy>=1.10.4",
    "scikit-learn>=1.6.1",
    "scrublet>=0.2.3",
    "seaborn==0.13.2",
    "spatialdata[extra]>=0.3.0",
    "squidpy>=1.6.5",
    "tangram-sc>=1.0.4",
    "torch==2.7.0",
    "tqdm>=4.67.1",
]
