[project]
name = "mlnetst"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
build-system.requires = ["torch>=2.7.0"]
dependencies = [
    "anndata==0.11.4",
    "beautifulsoup4>=4.13.4",
    "datashader>=0.18.0",
    "decoupler==1.9.2",
    "holoviews>=1.20.2",
    "igraph>=0.11.8",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "liana>=1.5.1",
    "lightning>=2.5.1.post0",
    "manim>=0.19.0",
    "marimo[lsp]>=0.13.13",
    "matplotlib==3.10.1",
    "matplotlib-venn>=1.1.2",
    "networkx==3.4.2",
    "nichecompass>=0.1.3",
    "notebook>=7.4.1",
    "numba==0.61.2",
    "numpy>=2.2.5",
    "pandas==2.2.3",
    "param>=2.2.0",
    "pip>=25.1.1",
    "polars>=1.29.0",
    "pyjulia==0.0.6",
    "pymnet>=1.0.0",
    "pypath-omnipath>=0.16.17",
    "pyqt6>=6.9.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "scanpy>=1.10.4",
    "scikit-learn>=1.6.1",
    "scrublet>=0.2.3",
    "seaborn==0.13.2",
    "spatialdata[extra]>=0.3.0",
    "squidpy>=1.6.5",
    "tangram-sc>=1.0.4",
    "tensorboardx>=2.6.4",
    "torch==2.7.0",
    "torch-scatter",
    "torch-sparse",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]
